bug 357252: make parsing quoted timezone ids work, and don't cut ics values at commas when there can be only one value